--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "SoGive",
-  "version": "0.5.3",
+  "version": "0.5.5",
   "description": "Charity app",
   "author": "Daniel Winterstein",
   "repository": {
@@ -13,9 +13,9 @@
     "chart.js": "^2.8.0",
     "easy-enums": "^1.1.6",
     "easyi18n": "^1.1.1",
-    "hashmap": "^2.3.0",
+    "hashmap": "^2.4.0",
     "jquery": "^3.4.1",
-    "js-cookie": "^2.2.0",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.14",
     "md5": "^2.2.1",
     "promise-value": "^1.2.5",
@@ -30,8 +30,8 @@
     "react-stripe-elements": "^2.0.3",
     "scheduler": "^0.13.6",
     "sjtest": "^0.4.9",
-    "wwutils": "^0.9.4",
-    "you-again": "^0.8.5"
+    "wwutils": "^0.9.5",
+    "you-again": "^0.8.6"
   },
   "scripts": {
     "compile": "webpack --config $PWD/webpack.config.js --progress --colors",
@@ -58,6 +58,7 @@
     "jest-puppeteer": "^4.4.0",
     "ndb": "^1.1.5",
     "puppeteer": "^2.0.0",
+    "puppet-theatre": "^1.0.18",
     "shelljs": "^0.8.3",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
