--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "reactstrap": "^8.4.1",
     "sjtest": "^0.4.9",
     "wwutils": "^0.9.5",
-    "you-again": "^0.8.8"
+    "you-again": "^0.8.8",
+    "jest": "^25.1.0",
+    "shelljs": "^0.8.3",
+    "yargs": "^15.1.0"
   },
   "scripts": {
     "compile": "webpack --config $PWD/webpack.config.js --progress --colors",
@@ -74,8 +77,7 @@
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "ndb": "^1.1.5",
-    "puppet-theatre": "latest",
-    "puppeteer": "^2.0.0",
+    "puppeteer": "^3.0.0",
     "shelljs": "^0.8.3",
     "style-loader": "^0.23.1",
     "typescript": "^3.8.3",
