--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "puppet-theatre": "latest"
   },
   "scripts": {
-    "compile": "webpack --config $PWD/webpack.config.js --progress --colors && git log -1 > web/build/npm-compile.gitlog.txt && echo 'wwappbase.js' >> web/build/npm-compile.gitlog.txt && git --git-dir ../wwappbase.js/.git log -1 >> web/build/npm-compile.gitlog.txt",
+    "compile": "webpack --config $PWD/webpack.config.js --progress --colors && gitstamp.sh",
     "compile-watch": "webpack --config $PWD/webpack.config.js --progress --colors --watch",
     "compile-watch-fast": "NO_PROD=true webpack --progress --colors --watch",
     "test": "jest",
